✅ RawFileChangerTest Allows Tests to Specify "No Changes" Case
The `LLMVerifyingCodemodTestMixin` and `CodemodTestMixin` types allow
the test author to specify cases where the codemod should not act on a
file. This change adds the same capability to the `RawFileChangerTest`
fixture.

Also, this enhances the test fixture to detect the case where the user
has improperly set-up their test.

/towards ISS-834